Archive2/da/4b6c9545ceb212/output
main.cpp:16:14: error: use of undeclared identifier 'red'
    auto x = red;
             ^
1 error generated.
